--- a/style.css
+++ b/style.css
@@ -8,26 +8,48 @@ body {
 
 h1 {
   color: white;
-  text-shadow: 10px;
-  font-family: dancing script;
-  font-size: 80px;
-  position: absolute;
+  text-shadow: 2px 2px 10px black;
+  font-family: "Dancing Script", cursive;
+  font-size: 100px;
   text-align: center;
-  margin: 300px;
-  margin-left: 670px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  width: 100%;
 }
 
 button {
-  width: 200px;
+  width: 250px;
   height: 90px;
   font-family: dancing script;
   font-size: 30px;
   text-align: center;
   position: absolute;
   margin: 550px;
-  margin-left: 800px;
+  margin-left: 750px;
   border-radius: 10px;
   color: rgb(16, 16, 119);
   background-color: white;
   box-shadow: black;
+  cursor: pointer;
+}
+
+/* Keep the existing button styles */
+
+button {
+  animation: floating 2s ease-in-out infinite;
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
