--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+html,
 body {
   margin: 0;
   padding: 0;
   overflow-y: hidden;
   overflow-x: hidden;
   background-size: cover;
+  background-color: black;
 }
 
 h1 {
